--- a/FlyingBirdGame/app/src/main/res/layout/activity_game.xml
+++ b/FlyingBirdGame/app/src/main/res/layout/activity_game.xml
@@ -23,18 +23,19 @@
         android:id="@+id/bird"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginStart="44dp"
+        android:layout_marginStart="152dp"
         android:src="@drawable/bird"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.5" />
+        app:layout_constraintVertical_bias="0.498" />
 
     <TextView
         android:id="@+id/textViewStartInfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Tap to play"
+        android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,46 +45,53 @@
         android:id="@+id/imageViewSprite2"
         android:layout_width="50dp"
         android:layout_height="50dp"
+        android:layout_marginTop="240dp"
         android:visibility="invisible"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/sprite1"
-        tools:layout_editor_absoluteX="617dp"
-        tools:layout_editor_absoluteY="202dp" />
+        tools:layout_editor_absoluteX="617dp" />
 
     <ImageView
         android:id="@+id/imageViewCoin1"
         android:layout_width="50dp"
         android:layout_height="50dp"
+        android:layout_marginTop="16dp"
+
         android:visibility="invisible"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/coin"
-        tools:layout_editor_absoluteX="617dp"
-        tools:layout_editor_absoluteY="51dp" />
+        tools:layout_editor_absoluteX="617dp" />
 
     <ImageView
         android:id="@+id/imageViewSprite1"
         android:layout_width="50dp"
         android:layout_height="50dp"
+        android:layout_marginTop="168dp"
         android:visibility="invisible"
-        app:srcCompat="@drawable/sprite1"
-        tools:layout_editor_absoluteX="617dp"
-        tools:layout_editor_absoluteY="151dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/bee2"
+        tools:layout_editor_absoluteX="617dp" />
 
     <ImageView
         android:id="@+id/imageViewCoin2"
         android:layout_width="50dp"
         android:layout_height="50dp"
+        android:layout_marginTop="92dp"
+
         android:visibility="invisible"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/coin"
-        tools:layout_editor_absoluteX="617dp"
-        tools:layout_editor_absoluteY="101dp" />
+        tools:layout_editor_absoluteX="617dp" />
 
     <ImageView
         android:id="@+id/imageViewSprite3"
         android:layout_width="50dp"
         android:layout_height="50dp"
+        android:layout_marginTop="320dp"
         android:visibility="invisible"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/sprite2"
-        tools:layout_editor_absoluteX="617dp"
-        tools:layout_editor_absoluteY="252dp" />
+        tools:layout_editor_absoluteX="617dp" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
